Sec47_Chap418-XXX: test code optimizations